Minor css fix to goals textarea
re #24076

Bug was hidden by css caching before.

--- a/docroot/css/evals.css
+++ b/docroot/css/evals.css
@@ -51,7 +51,7 @@
 }
 
 .appraisal-criteria textarea {
-    width: 100%;
+    width: 100% !important;
 }
 
 .appraisal-criteria fieldset {
